--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class="container">
         <div class="hearts"></div>
-        <h1 class="title">Feliz San Valentin</h1>
+        <h1 class="title">Feliz San Valentin gogo</h1>
         <audio controls class="audio">
             <source src="music.mp3" type="audio/mpeg">
         </audio>
